--- a/SQL_Attempts.ipynb
+++ b/SQL_Attempts.ipynb
@@ -2,29 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "future feature annotations is not defined (abstracts.py, line 33)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/Users/CEE/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m2963\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \u001b[1;32m\"<ipython-input-14-9cd6224ba968>\"\u001b[0m, line \u001b[1;32m1\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    import mysql.connector\n",
+      "  File \u001b[1;32m\"/Users/CEE/anaconda3/lib/python3.6/site-packages/mysql/connector/__init__.py\"\u001b[0m, line \u001b[1;32m32\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    from .connection_cext import CMySQLConnection\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/Users/CEE/anaconda3/lib/python3.6/site-packages/mysql/connector/connection_cext.py\"\u001b[0;36m, line \u001b[0;32m40\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from .abstracts import MySQLConnectionAbstract\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/Users/CEE/anaconda3/lib/python3.6/site-packages/mysql/connector/abstracts.py\"\u001b[0;36m, line \u001b[0;32m33\u001b[0m\n\u001b[0;31m    from __future__ import annotations\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m future feature annotations is not defined\n"
+     ]
+    }
+   ],
    "source": [
-    "#import mysql.connector"
+    "import mysql.connector"
    ]
   },
   {
@@ -38,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -51,13 +56,6 @@
       "future feature annotations is not defined (abstracts.py, line 33)\n",
       "Connection info needed in SQLAlchemy format, example:\n",
       "               postgresql://username:password@hostname/dbname\n",
-      "               or an existing connection: dict_keys([])\n",
-      "Connection info needed in SQLAlchemy format, example:\n",
-      "               postgresql://username:password@hostname/dbname\n",
-      "               or an existing connection: dict_keys([])\n",
-      "No module named 'psycopg2'\n",
-      "Connection info needed in SQLAlchemy format, example:\n",
-      "               postgresql://username:password@hostname/dbname\n",
       "               or an existing connection: dict_keys([])\n"
      ]
     }
@@ -67,8 +65,8 @@
     "# alias mysql=/usr/local/mysql/bin/mysql\n",
     "#    dialect+driver://username:password@host:port/database\n",
     "#%sql /usr/local/mysql/bin/mysql://root:'Mysql2020!'@localhost:3306/world.db\n",
-    "%sql mysql+mysqlconnector://'root':'Mysql2020!'@localhost/world.db\n",
-    "%sql postgresql://'root':'Mysql2020!'@localhost/world.db"
+    "%sql mysql+mysqlconnector://root:Mysql2020!@localhost:3306/world.db\n",
+    "#%sql postgresql://'root':'Mysql2020!'@localhost/world.db"
    ]
   },
   {
